# NDKLearning

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/stevenhao/ndklearning/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  colorUtils.cpp  colorUtils.h  inlinehook_wrapper.cpp  inlinehook_wrapper.h  jvmti_helper.cpp  jvmti_helper.h  native-lib.cpp  shadowhook_wrapper.cpp  shadowhook_wrapper.h  string_utils.cpp  string_utils.h
app/src/main/cpp/jvmti/: CMakeLists.txt  jvmti_helper.cpp  jvmti_helper.h  jvmti_log.h  jvmti_utils.cpp  jvmti_utils.h  mem_object_info.h
app/src/main/cpp/linker/: art_helper.cpp  art_helper.h
app/src/main/cpp/test/: test2_class.cpp  test2_class.h  test3_class.cpp  test3_class.h
app/src/main/cpp/utils/: MockMutex.h  aqts_jni_entry.cc  aqts_library_loader.cc  aqts_library_loader.h  locks.h  log.h  mock_atomic.h  runtime_mock.h  test_class.cpp  test_class.h
app/src/main/cpp/utils/jni/: GcRootMock.cpp  GcRootMock.h  MockCompatFramework.h  MockCompressedReference.h  jni_android.cpp  jni_android.h
app/src/main/java/com/stevenhao/ndklearning/: FirstFragment.kt  JVMHelper.java  MainActivity.kt  MyString.java  SecondFragment.kt
app/src/main/java/com/stevenhao/ndklearning/activity/: LogoutDialogActivity.kt  Priority.java  SettingActivity.kt
app/src/main/java/com/stevenhao/ndklearning/base/: BaseActivity.kt
app/src/main/java/com/stevenhao/ndklearning/utils/: App.kt  Constants.kt  DeviceInfo.kt  HandlerUtils.kt  ThreadUtils.kt  Utils.kt
app/src/main/res/layout/: activity_setting.xml  content_main.xml  setting_lougout_dialog_layout.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/stevenhao/ndklearning/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
